WeeChat ChangeLog
=================
Sébastien Helleu <flashcode@flashtux.org>
v0.3.5-dev, 2011-01-31


Version 0.3.5 (under dev!)
--------------------------

* core: dynamically allocate color pairs (extended colors can be used without
  being added with command "/color add")
* core: allow background for nick colors (using "/")
* xfer: do not close chat buffers when removing xfer from list (bug #32271)

Version 0.3.4 (2011-01-16)
--------------------------

* core: add 256 colors support, new command /color, new section "palette" in
  weechat.conf (task #6834)
* core: fix scroll problem on buffers with free content and non-allocated lines
  (bug #32039)
* core: add info "weechat_upgrading", signal "upgrade_ended", display duration
  of upgrade
* core: replace the 10 nick color options and number of nick colors by a single
  option "weechat.color.chat_nick_colors" (comma separated list of colors)
* core: add support of python 2.7 in cmake and configure (debian #606989)
* core: add color support in option weechat.look.buffer_time_format
* core: call to hook_config when config option is created
* core: add new option weechat.look.highlight_regex and function
  string_has_highlight_regex in plugin API (task #10321)
* core: fix infinite loop on gnutls handshake when connecting with SSL to server
  on wrong port or server with SSL problems (bug #27487)
* core: fix data sent to callback of hook_process (some data was sometimes
  missing), use a 64KB buffer for child output and send data to callback only
  when buffer is full
* core: fix crash when displaying groups in buffer nicklist
* core: fix bug with message "day changed to", sometimes displayed several
  times wrongly
* core: fix default value of bar items options (bug #31422)
* core: fix bug with buffer name in "/bar scroll" command
* core: add new option weechat.look.hotlist_unique_numbers (task #10691)
* core: add property "hotlist_max_level_nicks" in buffers to set max hotlist
  level for some nicks in buffer