@@ -383,6 +383,11 @@
 ** Typ: boolesch
 ** Werte: on, off (Standardwert: `on`)
 
+* *weechat.look.input_cursor_scroll*
+** Beschreibung: `number of chars displayed after end of input line when scrolling to display end of line`
+** Typ: integer
+** Werte: 0 .. 100 (Standardwert: `20`)
+
 * *weechat.look.input_share*
 ** Beschreibung: `Mit dieser Option kann man den Inhalt der Eingabezeile in allen Buffern verwenden. Es können dabei nur Befehle (commands), nur Text (text), beides (all) berücksichtigt werden (Der Befehlsverlauf der einzelnen Buffer bleibt hierbei erhalten)`
 ** Typ: integer
