@@ -7,6 +7,8 @@ v0.3.5-dev, 2011-01-31
 Version 0.3.5 (under dev!)
 --------------------------
 
+* core: add some chars after cursor when scrolling input line: new option
+  weechat.look.input_cursor_scroll (bug #21391)
 * core: dynamically allocate color pairs (extended colors can be used without
   being added with command "/color add")
 * core: allow background for nick colors (using "/")
